--- a/TripleAProject/TripleAProject.Webapi/appsettings.json
+++ b/TripleAProject/TripleAProject.Webapi/appsettings.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "MySql": "server=localhost;database=TripleA;user=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
   "AllowedHosts": "*"
