--- a/TripleAProject/TripleAProject.Application/TripleAProject.Application.csproj
+++ b/TripleAProject/TripleAProject.Application/TripleAProject.Application.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.*" />
     <PackageReference Include="Bogus" Version="34.*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.*" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.*" />
+	<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.*" />
   </ItemGroup>
 
 </Project>
