--- a/TripleAProject/TripleAProject.Webapi/appsettings.json
+++ b/TripleAProject/TripleAProject.Webapi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySql": "server=localhost;database=TripleA;user=root;password=mysql"
+    "MySql": "server=localhost;port=3306;database=TripleA;user=root;password=MySecretPassword"
   },
   "Logging": {
     "LogLevel": {
