JWT Model-Teil in Crud eingebaut

--- a/TripleAProject/TripleAProject.Webapi/TripleAProject.Webapi.csproj
+++ b/TripleAProject/TripleAProject.Webapi/TripleAProject.Webapi.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TripleAProject.Application\TripleAProject.Application.csproj" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.*" />
   </ItemGroup>
 
 </Project>
